Fix footer nav wrap.

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -6590,6 +6590,8 @@ li.current-theme {
 }
 
 .footer {
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   -ms-flex-pack: justify;
   justify-content: space-between;
   -ms-flex-align: center;
