--- a/applications/dashboard/scss/_footer.scss
+++ b/applications/dashboard/scss/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   @extend .row;
+  flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
   padding-left: $padding-default;
